More edits to partials

--- a/scss/_color.scss
+++ b/scss/_color.scss
@@ -45,18 +45,18 @@ $manilla-m70: #3e3c35;
 
 
 // Global Classes for FrontEnd Dev
-#green10, .green10 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include green10;}}
-#green20, .green20 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include green20;}}
-#green30, .green30 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include green30;}}
-#green40, .green40 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include green40;}}
-#green50, .green50 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include green50;}}
-#green60, .green60 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include green60;}}
-#green70, .green70 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include green70;}}
-#green80, .green80 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include green80;}}
-#manilla10, .manilla10 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include manilla10;}}
-#manilla20, .manilla20 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include manilla20;}}
-#manilla30, .manilla30 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include manilla30;}}
-#manilla40, .manilla40 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include manilla40;}}
-#manilla50, .manilla50 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include manilla50;}}
-#manilla60, .manilla60 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include manilla60;}}
-#manilla70, .manilla70 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include manilla70;}}
+.green10 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include green10;}}
+.green20 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include green20;}}
+.green30 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include green30;}}
+.green40 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include green40;}}
+.green50 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include green50;}}
+.green60 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include green60;}}
+.green70 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include green70;}}
+.green80 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include green80;}}
+.manilla10 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include manilla10;}}
+.manilla20 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include manilla20;}}
+.manilla30 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include manilla30;}}
+.manilla40 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include manilla40;}}
+.manilla50 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include manilla50;}}
+.manilla60 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include manilla60;}}
+.manilla70 {h1, h2, h3, h4, h5, h6, div, span, a, p {@include manilla70;}}
