--- a/scss/frms-master.scss
+++ b/scss/frms-master.scss
@@ -19,16 +19,16 @@ body {
     }
 }
 
-
 // Request A Quote CTA
-a.lime-cta {
+a.lime-cta, button.lime-cta, .lima-cta {
     padding: 16px 32px;
     background: $green-g30 !important;
     border-radius: 4px;
     color: $green-g70 !important;
     font-weight: 600;
     letter-spacing: 0;
-        // Hover
+
+    // Hover
         &:hover {
             background: $green-g50 !important;
             color: $manilla-m10 !important;
@@ -55,41 +55,45 @@ a.lime-cta {
             flex-direction: column-reverse;
             gap: 4px;
         }
-            .wpforms-page-indicator-page-progress-wrap {
-                height: 8px;
-            }
+
+        .wpforms-page-indicator-page-progress-wrap {
+            height: 8px;
+        }
     }
     span.wpforms-page-indicator-steps {
         font-size: 1rem;
     }
+
     // Full Width Submit Buttons
+
     .wpforms-form input[type=submit], .wpforms-form button[type=submit] {
         width: 100% !important;
     }
-    div.wpforms-container-full .wpforms-form {
-        .wpforms-page-button {
-            @include sans;
-            font-size: 1.25rem;
-            font-weight: 800;
-            margin: 0 5px;
-            min-width: 90px;
-            text-align: center;
-            padding: 16px;
-            border-radius: 4px;
-            width: 100%;
-
-        // Step Indicator
-        .wpforms-page-indicator {
-            margin: 0;
-        }
-
-        .wpforms-form .wpforms-field {
-            padding: 8px 0;
-        }
-    }
-}
 
     div.wpforms-container-full {
-        margin: 0 auto;
+         margin: 0 auto;
+        .wpforms-form {
+
+            .wpforms-page-button {
+                @include sans;
+                font-size: 1.25rem;
+                font-weight: 800;
+                margin: 0 5px;
+                min-width: 90px;
+                text-align: center;
+                padding: 16px;
+                border-radius: 4px;
+                width: 100%;
+            }
+
+            // Step Indicator
+            .wpforms-page-indicator {
+                margin: 0;
+            }
+
+            .wpforms-field {
+                padding: 8px 0;
+            }
+        }
     }
 }
