--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -3,23 +3,133 @@
 //Fonts
 $frms-sans: 'Shredder Sans', 'Inter', 'Open Sans', Arial, apple-system, system-ui, BlinkMacSystemFont, sans serif; // Shredder Sans
 $frms-sharp: 'Sharp Grotesk', 'Inter', 'Open Sans', Arial, apple-system, system-ui, BlinkMacSystemFont, sans serif; // Sharp Grotesk
-h1, h2, h3, h4, h5, h6, a, li, ul, span, div, ol, p, button {font-family: $frms-sans;}
 
 // Mixins - Must be decalred first before
-@mixin Sans {font-family: $frms-sans !important;}
-@mixin Sharp {font-family: $frms-sharp !important;}
-@mixin uppercase {text-transform: uppercase !important;} 
-@mixin titleCase {text-transform: capitalize !important;}
+@mixin sans {font-family: $frms-sans;}
+@mixin sharp {font-family: $frms-sharp;}
+@mixin uppercase {text-transform: uppercase;}
+@mixin titlecase {text-transform: capitalize;}
 
-/* Global Classes for FrontEnd Use */
-#sans, .sans {h1,h2,h3,h4,h5,h6,div,span,a,p {@include Sans;}}
-#sharp, .sharp {h1,h2,h3,h4,h5,h6,div,span,a,p {@include Sharp;}}
+// Global Classes for FrontEnd Use 
+.sans {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    div,
+    span,
+    a,
+    p {
+        @include sans;
+    }
+}
 
+.sharp {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    div,
+    span,
+    a,
+    p {
+        @include sharp;
+    }
+}
 
-/* Type Casing - Uppercase & Capitalize */
-.uppercase {h1, h2, h3, h4, h5, h6, a, li, ul, span, div, ol, p, button {@include uppercase;}} 
-.titleCase {h1, h2, h3, h4, h5, h6, a, li, ul, span, div, ol, p, button {@include titleCase;}}
-h1, h2, h3, h4, h5, h6, a, li, ul, span, div, ol, p, button {.uppercase {@include uppercase;} .titleCase {@include titleCase;}}
+// Type Casing - Uppercase & Capitalize
+
+.uppercase {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    div,
+    span,
+    a,
+    p {
+        @include uppercase;
+    }
+}
+
+.titlecase {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    div,
+    span,
+    a,
+    p,
+    button {
+        @include titlecase;
+    }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+div,
+span,
+a,
+p,
+button {
+    .sans {
+        @include sans;
+    }
+
+    .sharp {
+        @include sharp;
+    }
+
+    .uppercase {
+        @include uppercase;
+    }
+
+    .titlecase {
+        @include titlecase;
+    }
+}
 
 // Underline
-.underline {h1,h2,h3,h4,h5,h6,div,span,a,p {text-decoration: underline !important;}} h1,h2,h3,h4,h5,h6,div,span,a,p {.underline {text-decoration: underline !important;}}
+.underline {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    div,
+    span,
+    a,
+    p {
+        text-decoration: underline;
+    }
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+div,
+span,
+a,
+p {
+    .underline {
+        text-decoration: underline;
+    }
+}
+
+// Add Font Weight Modifiers
