--- a/scss/frms-master.scss
+++ b/scss/frms-master.scss
@@ -1,19 +1,34 @@
 // Master Styling for Federal Records Management
-@import '_color.scss';
-@import '_typography.scss';
-@import '_homepage.scss';
+@import '_color';
+@import '_typography';
 
 // Navigation
-.empty-class{background-color:$green-g40;}
+body {
+    // Overlapping Header
+    .grve-header-overlapping #grve-main-header {
+        left: 0;
+        right: 0;
+        max-width: 1320px;
+        border-radius: 8px;
+        margin: 2rem auto;
+    }
+    // Sticky Header
+    .grve-sticky-ready.grve-fixed.grve-sticky-header.grve-skin-sticky {
+        max-width: 100%;
+        width: 100%;
+    }
+}
 
 // Request A Quote CTA
-a.lime-cta {
+a.lime-cta, button.lime-cta, .lima-cta {
     padding: 16px 32px;
     background: $green-g30 !important;
     border-radius: 4px;
     color: $green-g70 !important;
     font-weight: 600;
     letter-spacing: 0;
+
+    // Hover
         &:hover {
             background: $green-g50 !important;
             color: $manilla-m10 !important;
@@ -25,4 +40,60 @@ a.lime-cta {
 ::selection {
     color: $green-g70;
     background: $green-g20 !important;
+}
+
+// FRMS Homepage Styling
+
+// Request A Quote Form - Form 197 - Multi Step Form
+#wpforms-form-197 {
+    // Multistep Page Indicator
+    .wpforms-page-indicato {
+        margin: 0;
+
+        &.progress {
+            display: flex;
+            flex-direction: column-reverse;
+            gap: 4px;
+        }
+
+        .wpforms-page-indicator-page-progress-wrap {
+            height: 8px;
+        }
+    }
+    span.wpforms-page-indicator-steps {
+        font-size: 1rem;
+    }
+
+    // Full Width Submit Buttons
+
+    .wpforms-form input[type=submit], .wpforms-form button[type=submit] {
+        width: 100% !important;
+    }
+
+    div.wpforms-container-full {
+         margin: 0 auto;
+        .wpforms-form {
+
+            .wpforms-page-button {
+                @include sans;
+                font-size: 1.25rem;
+                font-weight: 800;
+                margin: 0 5px;
+                min-width: 90px;
+                text-align: center;
+                padding: 16px;
+                border-radius: 4px;
+                width: 100%;
+            }
+
+            // Step Indicator
+            .wpforms-page-indicator {
+                margin: 0;
+            }
+
+            .wpforms-field {
+                padding: 8px 0;
+            }
+        }
+    }
 }
