--- a/scss/frms-master.css
+++ b/scss/frms-master.css
@@ -111,6 +111,15 @@
   text-transform: capitalize;
 }
 
+h1.bold, h2.bold, h3.bold, h4.bold, h5.bold, h6.bold, div.bold, span.bold, a.bold, p.bold, button.bold {
+  font-family: "Sharp Grotesk", "Inter", "Open Sans", Arial, apple-system, system-ui, BlinkMacSystemFont, sans serif;
+  font-weight: 600;
+}
+h1.light, h2.light, h3.light, h4.light, h5.light, h6.light, div.light, span.light, a.light, p.light, button.light {
+  font-family: "Sharp Grotesk", "Inter", "Open Sans", Arial, apple-system, system-ui, BlinkMacSystemFont, sans serif;
+  font-weight: 300;
+}
+
 h1 .sans,
 h2 .sans,
 h3 .sans,
